# Annie-bot-Discord.py

./: .breakpoints  config.py  main.py  pyproject.toml  requirements.txt  stay_online.py  tesst.py
cogs/: encourage.py  music.py  peace.py  quotes.py  social.py  speach.py
helper/: badword.py
