[tool.poetry]
name = "repl_python3_Annie-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
googletrans = "^3.1.0a0"
pytz = "^2021.1"
discord = "^1.7.3"
Flask = "^2.0.1"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
